2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c (json_parse_number): Remove static
	* common-src/amjson.h (json_parse_number): Add prototype
	* common-src/ammessage.c: parse number
	* common-src/ammessage-test.c: Test parsing of a message
	* common-src/Makefile.am: Add ammessage-test

2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Parse subsection name with or without double
	  quote
	* installcheck/Amanda_Config.pl: Test it
	* installcheck/Installcheck/Config.pm: set interactivity after they
	  are defined, add add_catalog

2017-12-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Create a cache in
	  $AMANDA_TMPDIR/cache_status/:CONF
	* server-src/amstatus.pl: Use the state return by current()
	* installcheck/Amanda_Rest_Runs.pl,
	  installcheck/Installcheck/Run.pm,
	  installcheck/amstatus.pl: Remove the status cache directory

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Process.pm (process_alive): Can be called a class method
	* perl/Amanda/Util.swg (is_pid_alive): New pname argument, call
	  Amanda::Process::process_alive if pname is set
	* perl/Amanda/Status.pm: Call is_pid_alive with 'driver' as the pname

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Use Amanda::Util::is_pid_alive

2017-12-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Util.swg (is_pid_alive): Use kill instead of
	  Amanda::Process

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amfeatures.c: Add fe_sendbackup_statedone
	* common-src/amfeatures.h: Add fe_sendbackup_statedone
	* amandad-src/amandad.c, client-src/sendbackup.c,
	  server-src/dumper.c: Fix for directtcp data_path

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Accept define with double quote

2017-12-13  Jean-Louis Martineau <JMartineau@carbonite.com>